Setup local notifications. sample notification file in Notifications.swift. Actual implementation in app.delegate and settings.swift

--- a/Now/Info.plist
+++ b/Now/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Take Photo</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Save Photo</string>
 </dict>
 </plist>
